# qflow

./: .gitignore  README  config.status  configure  configure.in  createdeb.sh
debian/: changelog  control  copyright  qflow.1  qflow.manpages
debian/patches/: fixes.diff
scripts/: Makefile  Makefile.in  addspacers.tcl  bdnet2cel.tcl  bdnet2sim.tcl  blif2cel.tcl  blif2sim.tcl  checkdirs.sh  checkdirs.sh.in  cleanup.sh  clocktree.tcl  clocktree.tcl.orig  createGDS.sh  decongest.tcl  display.sh  outpreporig.tcl  outputprep.tcl  place2def.tcl  place2def2.tcl  place2lef2.tcl  place2net2.tcl  placement.sh  postproc.tcl  preproc.tcl  qflow.sh  qflow.sh.in  resynthesize.sh  router.sh  rtl2bdnet.tcl  rtl2sim.tcl  setreset.tcl  synthesize.sh  synthesize_odin.sh  synthesize_yosys.sh  tmp.tcl  vesta.sh  vispreproc.tcl  vmunge.tcl  ybuffer.tcl  ypostproc.tcl
src/: AddIO2BDnet  AddIO2BDnet.c  AddIO2blif.c  BDnet2BSpice  BDnet2BSpice.c  BDnet2Verilog  BDnet2Verilog.c  BDnetFanout  BDnetFanout.c  CleanUpBDnet  CleanUpBDnet.c  Makefile  Makefile.in  blif2BSpice.c  blif2Verilog.c  blifFanout.c  blifrtl2bdnet.c  liberty2tech.c  verilogpp  verilogpp.c  vesta.c  vesta.c.new  vesta.c.new2  vesta.c.orig  vpreproc  vpreproc.c  vsplit.c
tech/: Makefile  Makefile.in
tech/osu035/: Makefile  Makefile.in  SCN4M_SUBM.20.tech  gate.cfg  osu035.genlib  osu035.magicrc  osu035.magicrc.in  osu035.par  osu035.sh  osu035.super  osu035_stdcells.lef
tech/osu050/: Makefile  Makefile.in  SCN3ME_SUBM.30.tech  gate.cfg  osu050.genlib  osu050.magicrc.in  osu050.par  osu050.sh  osu050.super  osu050_stdcells.lef
